[package]
name = "token"
version = "0.1.0"
edition = "2021"

[lib]
name = "token"
path = "src/lib.rs"

[[bin]]
name = "action"
path = "src/bin.rs"

[dependencies]
actions-toolkit = { git = "https://github.com/dev-bio/actions-toolkit.git", rev = "06eb843baf76eea5dff6ae3e4d4d11e35bf958e3" }
anyhow = "1.0.72"
secrecy = { version = "0.8.0", features = ["serde"] }
jwt-simple = "0.11.6"
serde = "1.0.176"
serde_yaml = "0.9.25"
serde_json = "1.0.104"
