[package]
name = "actions_token"
version = "0.1.0"
edition = "2021"

[lib]
name = "actions_token"
path = "src/lib.rs"

[[bin]]
name = "action"
path = "src/bin.rs"

[dependencies]
actions_toolkit = { git = "https://github.com/dev-bio/actions-toolkit.git", rev = "1c7f267287f77dc0782d8dc8e2a55f4c6adfa748" }
anyhow = "1.0.72"
secrecy = { version = "0.8.0", features = ["serde"] }
jwt-simple = "0.11.6"
serde = "1.0.176"
serde_yaml = "0.9.25"
serde_json = "1.0.104"
